cabal-version:      2.4
name:               nito
version:            0.1.0.0

author:             chiyoku
maintainer:         chiyokuoni@gmail.com

executable nito
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base              >= 4.14.3.0
                    , polysemy          >= 1.7.1.0
                    , morpheus-graphql  >= 0.18.0
                    , postgresql-simple >= 0.6.4
                    , dotenv            >= 0.9.0.0
                    , jwt               >= 0.10.0
                    , aeson             >= 1.5.6.0
                    , scotty            >= 0.11.5
                    , text              >= 1.2.5.0
                    , scientific        >= 0.3.6.2
                    , containers        >= 0.6.0.1
                    , uuid              >= 1.3.15
                    , time              >= 1.11.1.2
                    , bcrypt            >= 0.0.11
                    , bytestring        >= 0.10.12.0
                    , mtl               >= 2.2.2

    default-extensions: OverloadedStrings
                        TemplateHaskell
                        LambdaCase
                        BlockArguments
                        GADTs
                        FlexibleContexts
                        TypeOperators
                        DataKinds
                        PolyKinds
                        ScopedTypeVariables
                        TupleSections
                        DeriveAnyClass
                        DeriveGeneric
                        RankNTypes
                        
    default-language: Haskell2010
    other-modules: App.Config
                   App.Database 
                   App.Resolvers.User
                   App.Services.Auth.Hashing
                   App.Services.Auth.JWT
                   App.Services.Auth
                   App.Models.User
                   App.Resolvers.Root